# tutter-radio

./: .gitignore  README.md  flake.nix
client/: README.md  deploy  generate_proto  pubspec.yaml
client-react/: generate-protos  index.html  package-lock.json  package.json
client-react/src/: AlbumArt.jsx  App.css  App.jsx  DropdownMenuDemo.jsx  IconButton.css  IconButton.jsx  Main.css  Main.jsx  SliderDemo.css  SliderDemo.jsx  index.css  util.js
client-react/src/common/: connection-state.js  index.js
client-react/src/components/: AlbumArt.jsx  Checkbox.css  Checkbox.jsx  ListItem.css  ListItem.jsx  ModelProvider.jsx  Slider.css  Slider.jsx  VolumeSlider.css  VolumeSlider.jsx  index.js
client-react/src/model/: client.js  model.js  player.js
client-react/src/pages/: HomePage.jsx  LoadingPage.jsx  index.js
client/lib/: codec.dart  main.dart  player.dart  view_model.dart
client/lib/common/: audio_effect.dart  client_event.dart  common.dart  connection_state.dart  constants.dart  player.dart
client/lib/model/: persistence.dart
client/lib/model/abstract/: client.dart  media_controls.dart  notification_service.dart  player.dart
client/lib/model/implementation/: web_audio_player.dart  web_media_controls.dart  web_socket_client.dart
client/lib/model/util/: ogg_opus_utils.dart
client/lib/util/: exception_viewer.dart
client/lib/view/: cover_art_processor.dart  home_page.dart  report_song_dialog.dart  theme.dart  tutter_radio_app.dart
client/lib/view/util/: exception_viewer.dart  metadata_builder.dart  subject_builder.dart  view_model_provider.dart
client/test/: widget_test.dart
client/web/: index.html  manifest.json
protos/: message.proto
server/: Cargo.toml  build.rs  generate_proto
server/src/: common.rs  convert.rs  main.rs  mixer.rs  player.rs  report.rs
server/src/local/: source.rs
server/src/util/: byte_buffer.rs  mod.rs  opus_packet.rs  traits.rs
server/systemd/: tutter_radio.service
