[package]
name = "tutter-radio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
simple_logger = "5.1.0"
log = "0.4.28"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0" }
protobuf = { version = "3.7.2", features = ["bytes"]}
async-std = { version = "1.13.2", features = ["unstable"] }
byteorder = "1.5.0"
anyhow = "1.0.100"
rand = "0.9.2"
ogg = { git = "https://github.com/RustAudio/ogg", features = ["async"] }
clap = { version = "4.5.52", features = ["derive"] }

[build-dependencies]
protobuf-codegen = "3.7.2"